fixed button style with align-items

--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -18,12 +18,12 @@
     font-size: var(--font-size-sm);
     font-weight: var(--btn-font-weight);
     font-family: var(--font-family-secondary);
-    line-height: var(--btn-height-base);
+    line-height: var(--line-height-base);
 
     min-width: 170px;
     text-transform: uppercase;
     letter-spacing: 2.1px;
-
+    align-items: center;
     &,
     &:active,
     &:focus {
